# pitch_shifter

./: .gitignore  LICENSE  README.md  dac_loss.py  data.py  example.py  model.py  model_1d.py  model_1d_v2.py  notes.txt  notes_gan.txt  notes_gan_remove_artifacts.txt  notes_remove_artifacts.txt  notes_unshift_down.txt  notes_unshift_down_diffusion.txt  notes_unshift_down_gan.txt  preprocess_audio.py  pyproject.toml  requirements.txt  setup.py  test_model.py  train.py  train_gan.py  wavlm_loss.py
data/: data.py
model/: model_1d.py  model_1d_melgan_based.py  model_2d.py
pitch_shifter/data/: data.py
pitch_shifter/loss/: wavlm_loss.py
pitch_shifter/model/: dac_discriminator.py  model_1d.py  model_1d_dac.py  model_1d_spec.py  model_1d_spec_2.py  model_1d_spec_phase.py  model_1d_v2.py  model_1d_v2_diffusion.py  model_1d_vocos.py  model_2d_v2.py  model_hybrid.py  model_natten_transformer.py
scripts/: benchmark_cqt_speeds.py  download_acappella_data.py  evaluate_remove_artifacts.py  evaluate_unshift_down.py  example_plot_phase.py  example_remove_artifacts.py  preprocess_audio.py  preprocess_audio_remove_artifacts.py  preprocess_audio_unshift_down.py  resampling_test.py  test_compile_optimizer.py  test_zero_mean.py  train.py  train_remove_artifacts.py  train_remove_artifacts_gan.py  train_unshift_down.py  train_unshift_down_diffusion.py  train_unshift_down_gan.py
